[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Level/HazardFloor.gd" type="Script" id=1]
[ext_resource path="res://assets/art/tileset/spike.png" type="Texture" id=3]
[ext_resource path="res://src/Ability/Base/BaseAbilitySystemComponent.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Ability/Base/BaseGameplayEffect.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 10 )

[node name="HazardFloor" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 20, 50 )

[node name="GameplayEffectTemplate" parent="." instance=ExtResource( 5 )]
StatToModify = 1
ValueToModify = 20.0

[node name="AbilitySystemComponent" parent="." instance=ExtResource( 4 )]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
